# shmring

./: .gitignore  .golangci.yml  README.md  doc.go  errors.go  go.mod  go.sum  header.go  options.go  reader.go  ringbuffer_test.go  shm_android.go  shm_native.go  shm_wasm.go  writer.go
.github/workflows/: ci.yml
backend/: android.go  backend.go  mem.go  mem_test.go  shm.go  wasm.go
examples/android-smoketest/: main.go
examples/consumer/: main.go
examples/producer/: main.go
magefiles/: android.go  darwin.go  env.go  go.mod  linux.go  magefile.go  release.go  rust.go  web.go  windows.go
mobile/: mobile.go
npm/: README.md  package.json
rust/: Cargo.toml  README.md
rust/examples/: consumer.rs  producer.rs
rust/src/: error.rs  header.rs  lib.rs  options.rs  reader.rs  shm.rs  wasm_api.rs  writer.rs
rust/src/backend/: mem.rs  mod.rs  shm.rs  wasm.rs
rust/tests/: ringbuffer.rs  shm_ipc.rs
web/: shmring.js
web/devserver/: main.go
web/e2e/: package-lock.json  package.json  test.mjs
web/example/: index.html  worker.js
web/wasm/: main.go  promise.go
