[package]
name = "shmring"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Fixed-capacity, single-producer/single-consumer byte ring buffer over shared memory (same wire format as the Go and JS implementations)"
repository = "https://github.com/gofsd/shmring"
homepage = "https://github.com/gofsd/shmring#rust"
readme = "README.md"
keywords = ["shared-memory", "ring-buffer", "ipc", "spsc"]
categories = ["concurrency", "memory-management"]

[lib]
name = "shmring"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
